--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
     "@divriots/jampack": "^0.23.2",
+    "@fontsource/pt-serif": "^5.0.21",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
     "@types/react": "^18.2.48",
